# RenderLab

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  setup.md
cmake/: UbpaTool.cmake
config/: ROOT_PATH.h.in  config.in
data/: .gitignore
data/FNN/: data_ID_name.txt  template.fs
data/FNN/12/: 12_0_dense0.csv  12_0_dense1.csv  12_0_dense2.csv  12_KDTree.json  12_minVal_and_extent.csv
data/FNN/13/: 13_1_dense0.csv  13_1_dense1.csv  13_1_dense2.csv  13_2_dense0.csv  13_2_dense1.csv  13_2_dense2.csv  13_3_dense0.csv  13_3_dense1.csv  13_3_dense2.csv  13_4_dense0.csv  13_4_dense1.csv  13_4_dense2.csv  13_5_dense0.csv  13_5_dense1.csv  13_5_dense2.csv  13_6_dense0.csv  13_6_dense1.csv  13_6_dense2.csv  13_KDTree.json  13_minVal_and_extent.csv
data/FNN/14/: 14_1_dense0.csv  14_1_dense1.csv  14_1_dense2.csv  14_2_dense0.csv  14_2_dense1.csv  14_2_dense2.csv  14_4_dense0.csv  14_4_dense1.csv  14_4_dense2.csv  14_5_dense0.csv  14_5_dense1.csv  14_5_dense2.csv  14_6_dense0.csv  14_6_dense1.csv  14_6_dense2.csv  14_KDTree.json  14_minVal_and_extent.csv
data/FNN/15/: 15_1_dense0.csv  15_1_dense1.csv  15_1_dense2.csv  15_2_dense0.csv  15_2_dense1.csv  15_2_dense2.csv  15_KDTree.json  15_minVal_and_extent.csv
data/FNN/16/: 16_1_dense0.csv  16_1_dense1.csv  16_1_dense2.csv  16_2_dense0.csv  16_2_dense1.csv  16_2_dense2.csv  16_KDTree.json  16_minVal_and_extent.csv
data/FNN/3/: 3_10_dense0.csv  3_10_dense1.csv  3_10_dense2.csv  3_12_dense0.csv  3_12_dense1.csv  3_12_dense2.csv  3_13_dense0.csv  3_13_dense1.csv  3_13_dense2.csv  3_15_dense0.csv  3_15_dense1.csv  3_15_dense2.csv  3_16_dense0.csv  3_16_dense1.csv  3_16_dense2.csv  3_3_dense0.csv  3_3_dense1.csv  3_3_dense2.csv  3_5_dense0.csv  3_5_dense1.csv  3_5_dense2.csv  3_6_dense0.csv  3_6_dense1.csv  3_6_dense2.csv  3_7_dense0.csv  3_7_dense1.csv  3_7_dense2.csv  3_KDTree.json  3_minVal_and_extent.csv
data/SObjs/: CB_Glass.sobj  CB_Glass.xml  CB_PointLight.xml  point light.xml
data/shaders/: .gitignore  README.md
data/shaders/App/: Sample_BSDF_FrostedGlass.fs
data/shaders/Common/: MVP_P3.vs  basic.fs  basic_P2T2.vs  basic_P3.vs  basic_P3N3.vs  basic_P3N3T2.vs  basic_P3N3T2T3.vs  basic_P3N3T2T3_offset.vs  basic_P3N3T2_invN.vs  basic_P3N3_invN.vs  basic_P3T2.vs  basic_T2.fs  camera.h  gamma.fs  interpolation.fs  postProcess.fs
data/shaders/Engine/: BSDF_Diffuse.fs  BSDF_FrostedGlass.fs  BSDF_MetalWorkflow.fs  Gooch.fs
data/shaders/Math/: Segment.h  basic.h  intersect.h  line.h  plane.h  quat.h  sample.h
include/: .gitignore
include/Basic/: AliasMethod.h  ArgManager.h  Array2D.h  BBox.h  BasicSampler.h  CSVSaver.h  Capsule.h  Config.h  CosineWeightedHemisphereSampler3D.h  Cube.h  Disk.h  Element.h  Error.h  EventManager.h  File.h  Frame.h  FunctionTraits.h  GStorage.h  Geometry.h  HeapObj.h  Image.h  ImgPixelSet.h  KDTree.h  LStorage.h  LambdaOp.h  Math.h  Math.inl  Node.h  Op.h  OpQueue.h  Parallel.h  Perlin.h  Plane.h  Ptr.h  RandSet.h  Ray.h  Sampler2D.h  Sampler3D.h  Shape.h  Singleton.h  (+8 more)
include/Basic/Op/: LambdaOp.h  Op.h  OpQueue.h
include/Basic/Sampler/: BasicSampler.h  CosHsSampler3D.h  Sampler2D.h  UniformGridSampler2D.h
include/Basic/ShapeMesh/: CapsuleMesh.h  CubeMesh.h  DiskMesh.h  PlaneMesh.h  ShapeMesh.h  SphereMesh.h
include/Basic/UGM/: BBox.h  EulerYXZ.h  Frame.h  Mat3x3.h  Mat4x4.h  Normal.h  Point.h  Point1.h  Point2.h  Point3.h  Point4.h  Quat.h  RGB.h  RGBA.h  Ray.h  Scale.h  Transform.h  UGM.h  Val.h  Val1.h  Val2.h  Val3.h  Val4.h  Vector.h  Vector1.h  Vector2.h  Vector3.h  Vector4.h
include/CppUtil/Basic/: AliasMethod.h  ArgManager.h  Array2D.h  BBox.h  BasicSampler.h  CSV.h  CSVSaver.h  Capsule.h  Config.h  CosineWeightedHemisphereSampler3D.h  Cube.h  Disk.h  EleVisitor.h  Element.h  Error.h  EulerYXZ.h  EventManager.h  File.h  FunctionTraits.h  GStorage.h  HeapObj.h  Image.h  ImgPixelSet.h  InfoLambdaOp.h  KDTree.h  LStorage.h  LambdaOp.h  Mat3x3.h  Mat4x4.h  Math.h  Math.inl  Matrix4x4.h  Node.h  Normal.h  Op.h  OpNode.h  OpQueue.h  Operation.h  Perlin.h  Plane.h  (+34 more)
include/CppUtil/Engine/: AllBSDFs.h  AllComponents.h  AreaLight.h  BBox.h  BSDF.h  BSDF_CookTorrance.h  BSDF_Diffuse.h  BSDF_Emission.h  BSDF_Frostbite.h  BSDF_FrostedGlass.h  BSDF_Glass.h  BSDF_MetalWorkflow.h  BSDF_Mirror.h  BVHAccel.h  BVHNode.h  BVHNode.inl  Beckmann.h  Camera.h  Capsule.h  CapsuleLight.h  CmptCamera.h  CmptGeometry.h  CmptLight.h  CmptMaterial.h  CmptTransform.h  Component.h  DeferredRaster.h  DirectIllumRaster.h  DirectionalLight.h  Disk.h  (+49 more)
include/Engine/: AllBSDFs.h  AllComponents.h  AreaLight.h  BSDF.h  BSDF_CookTorrance.h  BSDF_Diffuse.h  BSDF_Emission.h  BSDF_Frostbite.h  BSDF_FrostedGlass.h  BSDF_Glass.h  BSDF_MetalWorkflow.h  BSDF_Mirror.h  BVHAccel.h  Beckmann.h  Capsule.h  CapsuleLight.h  CmptCamera.h  CmptGeometry.h  CmptLight.h  CmptMaterial.h  CmptTransform.h  Component.h  DeferredRaster.h  DirectIllumRaster.h  DirectionalLight.h  Disk.h  DiskLight.h  Engine.h  Filter.h  FilterBox.h  FilterGaussian.h  FilterMitchell.h  FilterSinc.h  FilterTriangle.h  ForwardNPR.h  ForwardRaster.h  GGX.h  Gooch.h  ImgFilter.h  InfiniteAreaLight.h  (+30 more)
include/GLFW/: Glfw.h
include/OpenGL/: Camera.h  CommonDefine.h  FBO.h  Mesh.h  Model.h  Shader.h  Texture.h  VAO.h
include/Qt/: OpThread.h  PaintImgOpCreator.h  RasterOpCreator.h  RawAPI_Define.h  RawAPI_OGLW.h
include/UI/: Attribute.h  Grid.h  Hierarchy.h  Setting.h  Tree.h
notes/: BSDF_MetalWorkflow.md
projects/: .gitignore  RenderLab.sln
projects/RenderLab/: RenderLab.h  RenderLab.vcxproj  RenderLab.vcxproj.filters  style.qrc
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/Basic/: CMakeLists.txt  CSVSaver.cpp  Config.cpp  EventManager.cpp  ImgPixelSet.cpp  Math.cpp
src/Engine/: CMakeLists.txt
src/OpenGL/: CMakeLists.txt  Camera.cpp  FBO.cpp  Shader.cpp  Texture.cpp  VAO.cpp  desktop.ini
src/Qt/: CMakeLists.txt  OpThread.cpp  PaintImgOpCreator.cpp  RawAPI_OGLW.cpp  desktop.ini
src/Test/: CMakeLists.txt
src/UI/: Attribute.cpp  CMakeLists.txt  Grid.cpp  Hierarchy.cpp  Tree.cpp  desktop.ini
(+917 files in other folders)
